# braidpool

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Cargo.toml  Dockerfile  Here is the updated list of files  README.md  cpunet_node.nix  docker-compose.yml  mkdocs.yml  proposal.bib  proposal.tex  run_dot.sh  runit  selftest.sh
.githooks/: pre-commit
.github/workflow/: cmake.yml
.github/workflows/: cmake.yml  docs.yml  frontend-test.yml  jekyll-gh-pages.yml  node.js.yml  prettier.yml  python-unittest.yaml  rust-node.yml  rustfmt.yml
braidpool-primitives/: Cargo.toml  main.rs
braidpool-primitives/src/: beads.rs  braid.rs  lib.rs
braidpool-primitives/src/bead/: mod.rs  tests.rs
braidpool-primitives/src/braid/: mod.rs  tests.rs
braidpool-primitives/src/committed_metadata/: mod.rs
braidpool-primitives/src/data/: test.json
braidpool-primitives/src/utils/: bitcoin.rs  mod.rs  test_utils.rs
braidpool-primitives/src/utils/bitcoin/: mod.rs
braidpool-primitives/tests/: bead_tests.rs  braid_tests.rs
braidpool-rs/: Cargo.toml
braidpool-rs/src/: connection.rs  main.rs  protocol.rs
braidpool-rs/src/connection/: mod.rs  protocol.rs
channels/: CMakeLists.txt  README.md  one_way_channel.cpp  one_way_channel_config.h.in
channels/channel/: CMakeLists.txt
channels/channel/include/: channel.hpp  channel_transaction.hpp  channel_update_transaction.hpp  funding_transaction.hpp  refund_transaction.hpp
channels/channel/src/: channel.cpp  channel_transaction.cpp  channel_update_transaction.cpp  funding_transaction.cpp  refund_transaction.cpp
channels/channel/tests/: channel_test.cpp  funding_transaction_test.cpp  main.cpp
dashboard/: .gitignore  Dockerfile  README.md  index.html  jest.config.ts  manifest.json  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/.husky/: pre-commit
dashboard/api/: .dockerignore  .env.example  Dockerfile  README.md  app.js  nodeApi.js  package-lock.json  package.json  proxy.js  server.js  utils.ts
dashboard/src/: App.css  App.tsx  env.d.ts  index.css  index.tsx
docs/: .prettierrc  Consensus Figures.ipynb  Gemfile  README.md  _config.yml  braid_consensus.md  braidpool_spec.md  general_considerations.md  index.md  overview.md  package-lock.json  package.json  roadmap.md  specification.md  vocs.config.ts
docs/_drafts/: 2021-07-01-hub-introduction.md  2021-08-19-actors.md  2021-11-02-streaming-shares-delivery-to-market-makers.md  2021-12-15-options-using-discrete-log-contracts.md  2022-08-20-sss-vs-vss.md  2022-09-12-vss-on-gossip-network.md  2023-08-01-lightning-liveness.md
docs/_layouts/: default.html
docs/_posts/: 2021-06-28-why-braidpool.md  2021-06-30-can-braidpool-reuse-p2pool-components.md  2021-06-30-can-p2pool-do-what-braidpool-does.md  2021-08-18-deliver-hashrate-to-market-makers.md  2021-08-23-technical-summary.md  2022-01-06-Futures-Contract-Overview.md  2023-03-05-specifications.md  2023-04-02-synchrony-in-bitcoin.md  2023-08-09-block-generation.md  2023-08-09-p2p-connections.md  2023-08-22-frost-for-braidpool.md
docs/pages/: braid_consensus.md  derivatives.md  general_considerations.md  index.mdx  overview.md  roadmap.md
docs/specifications/: Bitcoin.tla  BlockGeneration.tla  Broadcast.md  Broadcast.tla  DAG.tla  P2PBroadcast.tla  P2PBroadcastSpec.tla  P2PChannel.tla  ShamirSecretSharing.tla  UHPO.tla
figures/: epoch.dot  isolated-miners.dot  shares-dag.dot  work-share.dot
mutinynet/: Dockerfile  run.sh
node/: Cargo.toml
node/schema/: chain.capnp  common.capnp  echo.capnp  handler.capnp  init.capnp  mining.capnp  proxy.capnp
node/src/: block_template.rs  braid.rs  chain_capnp.rs  cli.rs  common_capnp.rs  config.rs  connection.rs  default_braidpool_config.toml  echo_capnp.rs  handler_capnp.rs  init_capnp.rs  ipc.rs  lib.rs  main.rs  p2p.rs  protocol.rs  proxy_capnp.rs  rpc.rs  shutdown.rs  template.rs  zmq.rs
node/src/bead/: mod.rs  tests.rs
node/src/behaviour/: mod.rs  tests.rs
node/src/braid/: io_json.rs  mod.rs  tests.rs
node/src/braid_functions/: io_json.rs  mod.rs  tests.rs
node/src/committed_metadata/: mod.rs
node/src/ipc/: c++_capnp.rs  client.rs  mining_capnp.rs
node/src/protocol/: handshake.rs  heartbeat.rs  ping.rs
node/src/uncommitted_metadata/: mod.rs
node/src/utils/: mod.rs  test_utils.rs
pool/: .gitignore  CMakeLists.txt  pool_config.h.in
pool/include/: runner.hpp  share.hpp  system.hpp  work.hpp
pool/include/impl/p2p/: connections_manager.ipp  node.ipp  protocol.ipp
pool/include/p2p/: connection.hpp  connections_manager.hpp  define.hpp  node.hpp  protocol.hpp
pool/include/util/: log.hpp  spinlock.hpp
pool/src/: pool.cpp  runner.cpp  share.cpp  work.cpp
pool/src/p2p/: connection.cpp  node.cpp  protocol.cpp
pool/test/: share.cpp
pool/test/p2p/: node.cpp  node_test.cpp
pool/tests/: main.cpp  share_test.cpp  work_test.cpp
pool/tests/p2p/: node_test.cpp
proposal/: Makefile  README.md  proposal.bib  proposal.tex
proposal/figures/: dag.dot  isolated-miners.dot  new-miner-communication.eps  payout-communication.eps  reward-calculation.dot  seal-atomic-swap.xmi  shares-propagation.dot  work-share.dot
simulations/: config.ini  requirements.txt  setup.cfg  todo.org
src/: beads.rs  braid.rs  cohorts.rs  lib.rs  main.rs  nodes.rs  shutdown.rs  zmq.rs
src/utils/: mod.rs  (+1 more)
tests/: 2width.braid  3cohort_tipcohort.braid  3w1missing.braid  Braid Example.ipynb  Cargo.toml  Consensus Figures.ipynb  Dockerfile  LambertW Fractions.ipynb  README.md  blob1.braid  blob2.braid  blob3.braid  blob4.braid  blob5.braid  blob6.braid  blob7.braid  blob_1cohort.braid  blob_1cohort2.braid  blob_closed_1bead.braid  blob_closed_1bead_tip.braid  blockchain.braid  braid.js  braid.py  braid.test.js  braid_io_json.rs  braid_tests.rs  cohort_tests.rs  cohorts.py  dangling_tip.braid  manytips.braid  my_test_braid.json  one_more_bead.braid  package.json  pairtip.braid  pid_calibrate.py  random1.braid  random10.braid  random2.braid  random3.braid  random4.braid  (+16 more)
(+274 files in other folders)
