[package]
name = "braidpool-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "net", "macros", "rt-multi-thread", "tracing", "io-util"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
futures = { version = "0.3.28", features = ["thread-pool"]}
bytes = "1.4.0"
flexbuffers = { version = "2.0.0", features = ["deserialize_human_readable", "serialize_human_readable"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
sqlite = { version = "0.31.1" }
clap = { version = "4.4.2", features = ["derive", "string"] }
bitcoin = { git = "https://github.com/braidpool/rust-bitcoin.git", branch = "cpunet" }
bitcoincore-rpc = { version = "0.19.0-cpunet", git = "https://github.com/braidpool/rust-bitcoincore-rpc.git", branch = "cpunet" }
bitcoincore-rpc-json = { version = "0.19.0-cpunet", git = "https://github.com/braidpool/rust-bitcoincore-rpc.git", branch = "cpunet" }
bitcoincore-zmq = { version = "1.5.2", git = "https://github.com/antonilol/rust-bitcoincore-zmq.git", features = ["async"] }
env_logger = "0.10.0"
log = "0.4.16"
shellexpand = "3.1.0"
