[package]
name = "braidpool-node"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
bincode = "2.0.1"
bytes = "1.10.1"
clap = "4.5.34"
env_logger = "0.11.7"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
num = "0.4.3"
num-traits = "0.2.19"
once_cell = "1.21.3"
ordered-float = "5.0.0"
rand = "0.9.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
shellexpand = "3.1.0"
sqlite = "0.37.0"
tokio = "1.44.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bitcoin = { git = "https://github.com/braidpool/rust-bitcoin.git" }