[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["signal","rt", "net", "macros", "rt-multi-thread", "tracing", "io-util"] }
serde = { version = "^1.0", features = ["derive"] }
bincode = "1.3"
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
futures = { version = "0.3.28", features = ["thread-pool"]}
bytes = "1.4.0"
flexbuffers = { version = "25.2", features = ["deserialize_human_readable", "serialize_human_readable"] }
serde_json = "1.0.140"
sqlite = { version = "0.36" }
clap = { version = "4.4.2", features = ["derive", "string"] }
bitcoin = { git = "https://github.com/braidpool/rust-bitcoin.git", branch = "cpunet",features=["serde"]}
bitcoin_hashes = { version = "0.16" }
bitcoincore-rpc = { version = "0.19.0"}
bitcoincore-rpc-json = { version = "0.19.0"}
bitcoincore-zmq = { version = "1.5.2", git = "https://github.com/antonilol/rust-bitcoincore-zmq.git", features = ["async"] }
env_logger = "0.11"
log = "0.4.16"
shellexpand = "3.1.0"
num = { version = "0.4.1", features = ["serde", "rand"] }
num-traits = "0.2"
once_cell = "1.18.0"
rand = "0.8"
sha2 = "0.10"
bimap = "0.6.3"
ordered-float = "3.7.0"
lazy_static = "1.4.0"
regex = "1.11.1"
hex = "0.4.3"
num-bigint = "0.4.6"
transitive = "1.1.0"
secp256k1 = "0.30.0"
libp2p = { version = "0.55.0", features = ["identify", "quic", "tokio", "ping", "macros", "kad", "dns"] }
toml = "0.8.22"
